# traillens

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  fly.toml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260526_0001_initial_schema.py  20260618_0002_users_table.py  20260622_0003_photos_thumb_uri.py  20260701_0004_resource_item_type.py  20260713_0005_perf_indexes.py
apps/api/traillens_api/: __init__.py  config.py  deps.py  main.py  models.py
apps/api/traillens_api/middleware/: rate_limit.py
apps/api/traillens_api/routes/: auth.py  billing.py  export.py  health.py  library.py  oauth.py  photos.py  recipe.py  settings.py  trails.py
apps/api/traillens_api/schemas/: __init__.py  trail.py
apps/api/traillens_api/services/: auth.py  billing.py  db.py  embedding.py  exif.py  observability.py  orchestrator.py  stacker.py  storage.py  store.py  store_protocol.py
docs/: ARCHITECTURE.md  BRAND.md  COMPASS.md  DEPLOY.md  DEPLOY_CN.md  DEVELOPMENT.md  DOMAINS.md  EVAL.md  LOGO_PROMPTS.md  OAUTH_SETUP.md  OBSERVABILITY.md  PRODUCT_PLAN.md  PUSH_GUIDE.md  RECRUITMENT.md  REPLACE_DEMO_WITH_REAL.md  RESEARCH.md  SPEC_B_STARGAZER.md  SPEC_C_AGENT_TEMPLATE.md
e2e/: README.md  package.json  playwright.config.ts
examples/: README.md
scripts/: build_case_study.py  ci_local.sh  cli.py  export_openapi.py  init_template.sh  record_demo.py  seed_demo.py  sprint2_kickoff.sh
(+116 files in other folders)
