[project]
name = "traillens-api"
version = "0.0.1"
description = "TrailLens HTTP/SSE API."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.7",
    "httpx>=0.27",  # for test client
]

[project.optional-dependencies]
dev = ["pytest>=8", "anyio>=4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["traillens_api"]
